--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -31,15 +31,32 @@ button {
     border: 2px solid black;
     border-radius: 10px;
     font-size: 20px;
-    background-color: coral;
+    background-color: dodgerblue;
     color: white;
+}
+
+button.locked {
+    background-color: coral;
+}
+
+button.unlocked {
+    background-color: white;
+    color: black;
 }
 
 button:hover {
     border-color: white;
 }
 
-svg rect {
+svg .text-included {
+    fill: black; /* Default text color */
+}
+
+svg .text-excluded {
+    fill: gainsboro; /* Different text color for excluded items */
+}
+
+svg .rect-included {
     fill: white;
     stroke: black;
     stroke-width: 1px;
